fix(s3stream): merge continuous stream data block on force split
Signed-off-by: Shichao Nie <niesc@automq.com>